fix word-wrap

--- a/source/assets/stylesheets/locastyle/modules/_collapse.sass
+++ b/source/assets/stylesheets/locastyle/modules/_collapse.sass
@@ -31,6 +31,7 @@
   padding: 10px 35px 10px 10px
   cursor: pointer
   position: relative
+  word-wrap: break-word
 
   &:before
     +rotate(0deg)
